@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.25
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed crash when only 1 milestone was visible while using the mod setting to hide incomplete milestones.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.24
 Date: 2024-02-24
